user-api-implementation (#1)
* Added functionality to edit user on patch method.

* Added functionality to edit user on patch method.

* user api integration

* fixed Patch method

* All tests working & implementation of user API controllers

* Antes de cambiar clave a hex

* Securized Endpoints
Complete User-Api
Login Integration
Token management

* Securized Endpoints
Complete User-Api
Login Integration
Token management

* Securized Endpoints
Complete User-Api
Login Integration
Token management

* added getMyManager method
added getMyID
added getUserByUsername
added getAllUsernames
added filter By Role to getAllUsers endpoint

* added getMyManager method
added getMyID
added getUserByUsername
added getAllUsernames
added filter By Role to getAllUsers endpoint
